modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/css/main.scss
@import 'atlas-variables';

.cms-fds-fluid {
	.container-fluid {
		padding: 0;
	}

	.table-list {
		border: 0;
		margin-bottom: 0;

		.cell-item-actions {
			width: 10% !important;
		}

		thead {
			display: none;
		}
	}

	.table-responsive {
		margin-bottom: 0;
	}

	.visualization-mode-table {
		border: 0 !important;
		margin-inline: -1rem;
	}
}

.cms-related-assets {
	position: relative;

	.cms-related-assets-header {
		position: absolute;
		top: 1.5rem;
		z-index: 1;
	}

	.c-empty-state-animation {
		background-color: $light;
		border-radius: 4px;
		margin: 0;
		max-height: unset;
		max-width: unset;
		outline: 2px dashed $secondary-l2;
		padding: 2rem;
		transition-duration: 0.2s;
		transition-property: background-color, outline;
		transition-timing-function: ease-in-out;
	}

	.c-empty-state-text {
		font-weight: 700;
	}

	.c-empty-state-title {
		display: none;
	}

	.fds {
		.data-set-wrapper {
			.c-empty-state {
				margin: 0;
			}

			&.drop-target {
				background-color: transparent !important;
				border: 0 !important;
				margin: 0 !important;

				*:not(.btn-primary):not(.lexicon-icon-plus):not(
						.lexicon-icon-plus use
					) {
					background-color: transparent !important;

					.c-empty-state {
						background-color: $primary-l3 !important;
						outline: 2px solid $primary-l0;
					}

					.aspect-ratio-item,
					.c-empty-state-image,
					.c-empty-state-aspect-ratio {
						background-color: transparent !important;
					}

					.btn-secondary {
						background-color: $white !important;
					}
				}

				.table-responsive {
					border-radius: 0.5rem;
					outline: 2px solid $primary-l0;

					*:not(.btn-primary):not(.lexicon-icon-plus):not(
							.lexicon-icon-plus use
						) {
						background-color: $primary-l3 !important;
					}
				}
			}

			tr.drop-target {
				background-color: $primary-l3 !important;

				> td {
					border-color: $primary-l0 !important;
				}
			}
		}

		.management-bar-wrapper {
			border-bottom: 0;
			margin-bottom: 0;
		}

		.navbar-nav button.nav-btn.btn.btn-primary {
			background-color: $white;
			border-color: $secondary-l0;
			color: $secondary;
			margin-right: -1rem;
			z-index: 1;

			&:hover {
				background-color: $light-l1;
				border-color: $secondary-l0;
				color: $dark;
			}
		}
	}
}

.cms-tabs-fluid {
	.nav-tabs {
		margin-inline: -1rem;

		& + .tab-content .tab-pane {
			margin-top: -0.5rem;
			padding: 0;
		}
	}

	.table-list td {
		background-color: $white !important;
		border: 0;
	}
}

.custom-empty-state.cms-all-related-assets {
	.fds.c-slideout-container {
		min-height: unset;
	}
}

.custom-empty-state.cms-related-assets,
.custom-empty-state.cms-space-summary {
	.fds.c-slideout-container {
		min-height: unset;
	}

	.c-empty-state {
		margin: 2.5rem auto;
	}

	.c-empty-state-image {
		max-width: 136px;
	}

	.c-empty-state-title {
		font-size: 16px;
		margin-top: 1rem;
	}

	.c-empty-state-text {
		font-size: 14px;
	}

	.c-empty-state-footer {
		.btn {
			border-radius: 0.5rem;
			font-size: 0.875rem;
			line-height: 1.15;
			padding: 0.4375rem 0.75rem;

			.d-inline-flex.inline-item-after {
				align-items: center;
				line-height: 1;
				margin-top: -3px;
				vertical-align: middle;

				.lexicon-icon {
					margin-top: 0;
				}
			}
		}
	}

	&.space-summary-connected-sites {
		.c-empty-state-image {
			display: none;
		}
	}
}

.cursor-pointer {
	cursor: pointer;
}

